<?xml version="1.0"?>
<package>
  <name>demo_pioneer</name>
  <version>1.0.0</version>
  <description>
    Shows how to implement visual servoing schemes in order 
    to control a Pioneer robot.
  </description>

  <maintainer email="Fabien.Spindler@inria.fr">Fabien Spindler</maintainer>
  <author email="Fabien.Spindler@inria.fr">Fabien Spindler</author>

  <license>GPLv2</license>

  <url>http://wiki.ros.org/demo_pioneerr</url>
  <url type="repository">git://github.com/lagadic/demo_pioneer.git</url>

  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visp_bridge</build_depend>

  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visp_auto_tracker</run_depend>
  <run_depend>visp_bridge</run_depend>
  <run_depend>joy</run_depend>
  
  <!-- Additional dependencies that are used in the launch files provided as examples -->
  <!-- for a real Pioneer equipped with a firewire camera -->
  <!-- <run_depend>camera1394</run_depend> -->
  <!-- <run_depend>rosaria</run_depend> -->

  <buildtool_depend>catkin</buildtool_depend>

</package>
